src/index.css
@import url("https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap");

:root {
  color-scheme: light dark;
  background-image: url(./assets/anonymous-bg-main.jpg);
  background-size: cover;
  background-position: fixed;
  width: 100%;
}

* {
  box-sizing: border-box;
}

.rootRoute {
  width: 100%;
}

.navBar {
  display: flex;
  height: 4.5rem;
  justify-content: space-between;
  box-shadow: 0px 3px 8px white;
  border-radius: 12px;
  margin-bottom: 40px;
  backdrop-filter: blur(2px);
}

.navLogo {
  display: flex;
  gap: 25px;
}

.navBar img {
  width: 42.22px;
  height: 40px;
  margin-top: 19px;
  margin-left: 45px;
}

.appName {
  display: flex;
  align-items: center;
  font-family: "url", sans-serif;
  font-size: 20px;
  font-weight: 600;
  line-height: 23.5px;
  text-decoration: none;
  color: white;
}

.userLog {
  display: flex;
  align-items: center;
  gap: 30px;
  padding: 10px;
}

.showLogOut {
  display: flex;
  background: #404040;
  height: fit-content;
  color: white;
  font-size: 16px;
  border-radius: 10px;
  padding: 15px;
  transition: 0.3s;
  font-weight: 700;
  border: none;
  margin-right: 20px;
}

.showLogOut:hover {
  transition: 0.5s;
  background: white;
  color: black;
  filter: drop-shadow(0px 0px 3px rgb(181, 181, 181));
  box-shadow: 0px 0px 5px white;
  transform: scale(1.1);
}

.hideLogOut {
  display: none;
}

/* Root Outlet */
.outlet {
  display: flex;
  justify-content: center;
  margin-top: 20px;
}

/* Error Page */
#error-page div {
  display: flex;
  height: 90vh;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.error {
  font-size: 14px;
  margin: 0px;
}

/* INdex ROute which is default route */

.index {
  display: flex;
  align-items: center;
  flex-direction: column;
  font-family: "url", sans-serif;
  min-width: 320px;
  max-width: 650px;
  padding: 10px 10px 10px 10px;
  gap: 15px;
  color: #ffffff;
  backdrop-filter: blur(2px);
}

.rocketDiv {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;
  width: 228px;
  height: 40px;
  border-radius: 1000px;
  border: 1px solid #292929;
}

.index h1 {
  text-align: center;
  font-family: "url", sans-serif;
  font-size: 40px;
  font-weight: 700;
  margin-bottom: 0px;
}

.signUpLink {
  margin-top: 20px;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #404040;
  gap: 15px;
  width: 275px;
  height: 48px;
  border-radius: 20px;
  text-decoration: none;
  color: white;
}

.linkBtn {
  color: white;
}

/* signUp Route */
.signUp {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  background: #ffffff1a;
  font-family: "url", sans-serif;
  width: 387px;
  height: 480px;
  padding: 10px;
  gap: 0px;
  border-radius: 10px;
  backdrop-filter: blur(15px);
  box-shadow: 0px 0px 10px 1px white;
}

.signUp img {
  width: 25px;
  height: 25px;
}

.signUp h2 {
  height: 28px;
  font-size: 24px;
  line-height: 28.2px;
  margin-bottom: 50px;
}

.signUp Form {
  display: flex;
  align-items: center;
  flex-direction: column;
  gap: 20px;
}

.signUp Form > input {
  width: 250px;
  height: 48px;
  border-radius: 1000px;
  border: 1px solid #ffffff;
  padding-left: 35px;
  margin-bottom: -8px;
}

.logBtn {
  margin-top: 40px;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #404040;
  gap: 10px;
  width: 275px;
  height: 48px;
  border: none;
  margin-top: 20px;
  border-radius: 1000px;
  color: white;
}

.logBtn > img {
  height: 12px;
  width: 15px;
}

.allBtn {
  transition: 0.3s;
  box-shadow: 0px 0px 5px 1px white;
}

.allBtn:hover {
  background: white;
  color: black;
  transition: 0.4s;
  transform: scale(1.1);
  box-shadow: 0px 0px 5px 1px gray;
  filter: drop-shadow(0px 0px 1px rgb(181, 181, 181));
  cursor: pointer;
}

.allBtn:hover img {
  filter: invert(100%);
}

/* sign up otp screen */
.otp p {
  width: 254px;
  font-family: "url", sans-serif;
  font-size: 14px;
  line-height: 16.45px;
  text-align: center;
  color: #ffffff80;
}

.actCreated {
  gap: 10px;
}

.actCreated > img {
  width: 31.7px;
  height: 33.33px;
}

.actCreated h2 {
  width: 197px;
  font-family: "url", sans-serif;
  line-height: 28.2px;
  text-align: center;
}

/* Dashboard */

.dashboard {
  font-family: "url", sans-serif;
  display: flex;
  justify-content: center;
  gap: 100px;
  color: #ffffff80;
}

.tabs {
  display: flex;
  flex-direction: column;
  gap: 20px;
  margin-top: 40px;
}

.tabLink {
  display: flex;
  align-items: center;
  width: 290px;
  height: 57px;
  text-decoration: none;
  color: #ffffff80;
  font-size: 20px;
  border-radius: 10px;
  padding-left: 24px;
  background: #ffffff0d;
  box-shadow: 0px 0px 5px gray;
}

.active {
  background: #ffffff4d;
  color: white;
}

.createPost {
  display: flex;
  justify-content: start;
  border: 1px solid #fff;
  align-items: center;
  text-align: left;
  width: 18.125rem;
  gap: 15px;
  font-weight: 700;
}

.details {
  display: flex;
  background: #0d0d0dc0;
  padding: 14px 14px 14px 19px;
  margin: 0px;
  box-shadow: 0px 0px 10px 1px white;
  border-radius: 15px;
  height: 30rem;
}

/* Dashboard Index */

.dashboardIndex {
  font-family: "url", sans-serif;
  margin-top: 0px;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 20px;
  padding: 15px;
  backdrop-filter: blur(2px);
}

.dashboardIndex * {
  text-decoration: none;
  color: #ffffff80;
}

.dashboardIndex > h2 {
  color: white;
  margin: 0px;
}

.postDetailsOutlet {
  border-radius: 10px;
  width: 554px;
  backdrop-filter: blur(1px);
  overflow: scroll;
}

.postDetailsOutlet::-webkit-scrollbar {
  display: none;
}

.post {
  text-align: center;
  width: 530px;
  background: #ffffff0d;
  border-radius: 10px;
  box-shadow: 0px 0px 5px white;
  transition: 0.2s;
}

.post:hover {
  transition: 0.3s;
  transform: scale(1.03);
  filter: drop-shadow(0px 0px 1px white);
  backdrop-filter: blur(8px);
}

.post > p {
  margin-bottom: 0px;
  font-size: 20px;
  font-weight: 700;
}

.postDetails {
  display: flex;
  justify-content: space-around;
  gap: 12px;
  line-height: 18.8px;
}

.postDetails p {
  margin: 15px;
}

/* Loader styles */
.loader {
  display: flex; /* Use flexbox for centering */
  justify-content: center; /* Center horizontally */
  align-items: center; /* Center vertically */
  gap: 15px;
  /* font-size: 26px; Font size for loading text */
  color: #d2d2d2; /* Color of the loading text */
}

.loader:before {
  content: ""; /* Empty content for the loader */
  display: inline-block; /* Required for animation */
  width: 20px; /* Width of the spinner */
  height: 20px; /* Height of the spinner */
  border: 5px solid #ccc; /* Light gray border */
  border-top-color: #242424; /* Color for the spinner's top */
  border-radius: 50%; /* Make it circular */
  animation: spin 1s linear infinite; /* Spin animation */
}

/* Spin animation */
@keyframes spin {
  0% {
    transform: rotate(0deg); /* Start position */
  }
  100% {
    transform: rotate(360deg); /* End position */
  }
}

/* Create Post Route */
.createPostRoute h2 {
  font-family: "url", sans-serif;
  padding: 0px;
  margin: 0px;
  font-size: 20px;
  line-height: 23.5px;
  color: white;
}

.createPostRoute {
  margin: 0px;
}

.createPostRoute Form {
  display: flex;
  flex-direction: column;
  gap: 23px;
  padding: 18.5px;
  align-items: center;
}

.createPostRoute Form input,
.createPostRoute Form textarea {
  border: 1px solid gray;
  padding: 17px 17px 17px 24px;
  font-size: 20px;
  background: #ffffff0d;
  border-radius: 10px;
}

#post-title {
  width: 486px;
  height: 58px;
}

#post-description {
  width: 486px;
  height: 160px;
  resize: none;
}

.submitPost {
  width: 300px;
  height: 60px;
  background: #ffffff1a;
  color: #ffffff80;
  font-size: 20px;
  border: 1px solid white;
  border-radius: 10px;
}

/* Post Description Route */
.postData * {
  padding: 0px;
  margin: 0px;
}

.postData {
  font-family: "url", sans-serif;
  width: 523px;
  padding: 25px 25px 10px 28px;
  border-radius: 15px;
  gap: 0px;
}

.postData h3 {
  font-size: 20px;
}

.postData p {
  font-size: 16px;
}

.postData > p {
  margin-bottom: 17px;
}

.commentReply {
  display: flex;
  gap: 10px;
  font-style: italic;
}

.comments h3 {
  font-size: 16px;
  margin-top: 11px;
  margin-bottom: 16px;
}

.comments > p {
  color: blue;
  margin-bottom: 16px;
}

.reply {
  margin: 16px;
}

.replyOfReply {
  margin-left: 88px;
  margin-bottom: 6px;
}

.replyToCmt {
  margin-left: 88px;
}

.replyForm,
.commentForm {
  display: flex;
  gap: 20px;
}

.replyForm > *,
.commentForm > * {
  text-decoration: none;
  border: none;
  border-radius: 5px;
}

.replyForm input,
.commentForm input {
  padding-left: 10px;
  background: rgb(41, 41, 41);
  color: white;
  border: 1px solid white;
}

.replyForm button,
.commentForm button {
  padding: 5px;
  background: black;
  color: white;
  box-shadow: 2px 1px 2px white;
}

.commentForm {
  margin: 20px;
  height: 30px;
  padding-left: 10px;
}

.replyForm input {
  font-size: 12px;
  height: 22px;
}

.replyForm button {
  font-size: 10px;
  height: 22px;
}

